--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
     
            div.container{
-                         color: rgb(27, 27, 178);
+                         color: rgb(27, 178, 140);
                          font-weight: bold;
                          font-family: Georgia, 'Times New Roman', Times, serif;
            }
@@ -26,7 +26,7 @@
               }   
               
             header.d-flex{
-                  color: blueviolet;
+                  color: rgb(167, 75, 228);
             }
 
             h3.fs-2{
@@ -68,7 +68,7 @@
               </div>
               <div class="px-4 py-5 my-5 text-center">
                 <img class="d-block mx-auto mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-                <h1 class="display-5 fw-bold">Centered hero</h1>
+                <h1 class="display-5 fw-bold">You are a hero</h1>
                 <div class="col-lg-6 mx-auto">
                   <p class="lead mb-4">Quickly designnn and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
                   <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
